Config node steps

--- a/.github/workflows/steps-examples.yml
+++ b/.github/workflows/steps-examples.yml
@@ -2,8 +2,10 @@ name: steps
 on:
   push
 jobs:
-  jobx:
+  marketplace:
     runs-on: ubuntu-latest
     steps:
+      - name: Configuração do node
+        uses: actions/setup-node@v3
       - name: verification of node version
         run: node --version
